# chw

backend/: .coverage  .coveragerc  .env.example  CONTINUE.md  Dockerfile  Jenkinsfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  main_simple.py  pyproject.toml  setup.sh
backend/.github/workflows/: comprehensive-tests.yml  test.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: celery_app.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: base.py  crud_company.py  crud_kanban.py  crud_models.py  crud_quote.py  crud_supplier.py  crud_tender.py  crud_user.py  crud_user_session.py
backend/app/db/: base_class.py  init_db.py  session.py
backend/app/exceptions/: custom_exceptions.py
backend/app/middleware/: __init__.py  rate_limiting.py  session_control.py
backend/app/schemas/: company.py  kanban.py  quote.py  supplier.py  tender.py  token.py  user.py
backend/app/services/: __init__.py  ai_service.py  calendar_service.py  email_service.py  file_service.py  notification_service.py  quote_service.py
backend/app/tasks/: __init__.py  ai_tasks.py  calendar_tasks.py  email_tasks.py  file_tasks.py  notification_tasks.py
backend/app/utils/: __init__.py  datetime_utils.py  email_templates.py  file_processing.py  helpers.py
backend/app/websockets/: __init__.py  chat_handler.py  kanban_handler.py  notification_handler.py
backend/comprehensive_test_results/: test_report_1748546372.json  test_report_1748546425.json  test_report_1748546504.json  test_report_1748547170.json  test_report_1748547619.json  test_report_1748547788.json  test_report_1748547836.json
backend/scripts/: backup.sh  init-db.sql  init-mongo.js
backend/tests/: __init__.py  conftest.py  conftest_original.py  conftest_simple.py  run_comprehensive_tests.py  test_manager.py
backend/tests/api_docs/: __init__.py  test_contract_testing.py  test_openapi_validation.py
backend/tests/backup/: __init__.py  test_backup_recovery.py
backend/tests/config/: test_config.py
backend/tests/e2e/: test_user_workflows.py
backend/tests/fixtures/: base_fixtures.py
backend/tests/helpers/: test_helpers.py
backend/tests/integration/: test_auth_endpoints.py  test_celery_tasks.py  test_company_endpoints.py  test_database.py  test_database_migrations.py  test_kanban_endpoints.py  test_middleware.py  test_quote_endpoints.py  test_supplier_endpoints.py  test_tender_endpoints.py  test_user_endpoints.py  (+1 more)
(+83 files in other folders)
